@startuml

title __COM's Class Diagram__\n

  namespace Tom.com {
    class Tom.com.ConversionAssistant {
        {static} + scanner : Scanner
        {static} + conversionMenu()
        {static} + milesToKilometers()
        {static} + kilometersToMiles()
        {static} + gallonsToliters()
        {static} + poundstoKilos()
        {static} + ounceToGrams()
        {static} + dollarsToEuros()
        {static} + eurosToDollars()
        {static} + fahrenheitTocelsius()
        {static} + celsiusToFarhenheit()
    }
  }
  

  namespace Tom.com {
    class Tom.com.DigitalAssistant {
        - username : String
        {static} - scanner : Scanner
        + DigitalAssistant()
        + getDriveAssistant()
        + getDigitalWallet()
        + getDigitalDiary()
        + getUsername()
        + startAssistant()
        + mainMenu()
        {static} + welcome()
        {static} + initialiseusername()
        {static} + initialisemilestodrive()
        {static} + initialisebudget()
        + exit()
    }
  }
  

  namespace Tom.com {
    class Tom.com.DigitalDiary {
        - scanner : Scanner
        - placesVisited : ArrayList<String>
        + DigitalDiary()
        + digitalDiaryMenu()
        + addPlaceVisited()
        + printPlacesVisitedList()
    }
  }
  

  namespace Tom.com {
    class Tom.com.DigitalWallet {
        ~ scanner : Scanner
        - budget : double
        - spend : double
        - earned : double
        + DigitalWallet()
        + getBudget()
        + setBudget()
        + getSpend()
        + setSpend()
        + getEarned()
        + setEarned()
        + digitalWalletMenu()
        + useBudget()
        + earnings()
        + getRemainingbudget()
    }
  }
  

  namespace Tom.com {
    class Tom.com.DriveAssistant {
        - milesToDrive : double
        - milesDriven : double
        - remainingMiles : double
        {static} + scanner : Scanner
        + DriveAssistant()
        + getMilesToDrive()
        + setMilesToDrive()
        + getMilesdriven()
        + setMilesdriven()
        + getRemainingmiles()
        + setRemainingmiles()
        + driveAssistantMenu()
        + addMilesdriven()
        + RemainingMiles()
    }
  }
  

  namespace Tom.com {
    class Tom.com.Main {
        {static} + main()
    }
  }
  

  Tom.com.DigitalAssistant o-- Tom.com.DriveAssistant : driveAssistant
  Tom.com.DigitalAssistant o-- Tom.com.DigitalWallet : digitalWallet
  Tom.com.DigitalAssistant o-- Tom.com.ConversionAssistant : conversionAssistant
  Tom.com.DigitalAssistant o-- Tom.com.DigitalDiary : digitalDiary


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
